...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="AmE-m4-6N3">
                                <rect key="frame" x="144" y="217" width="312" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_username" label="Username"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="zrl-ki-mda">
                                <rect key="frame" x="144" y="281" width="312" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_password" label="Password"/>
...
                                <rect key="frame" x="144" y="345" width="312" height="38"/>
                                <color key="backgroundColor" red="0.4823529412" green="0.74117647060000003" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_login_btn" label="Login"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Login">
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Traverse List" id="Z9n-rR-ED8">
                        <barButtonItem key="leftBarButtonItem" title="Account Settings" id="fPh-iU-020">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="New Traverse" id="ep7-x8-fsO">
                            <connections>
                                <segue destination="N4G-kX-BQQ" kind="show" identifier="new_traverse_screen" id="4kV-sw-c4B"/>
...
                                <rect key="frame" x="160" y="99" width="420" height="38"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="new_traverse_name" label="Name"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="38" id="MIH-El-9lf"/>
...
                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="PWq-yc-vp5">
                                <rect key="frame" x="160" y="145" width="420" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="new_traverse_description" label="Description"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="38" id="Zjy-4E-QkV"/>
...
                            <textField opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="OP2-A4-b62">
                                <rect key="frame" x="160" y="191" width="420" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="new_traverse_crew" label="Crew"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="38" id="Icq-5K-kZJ"/>
...
                            <textField opaque="NO" clipsSubviews="YES" tag="4" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" placeholder="..." textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="GQ5-Yi-2Nx">
                                <rect key="frame" x="160" y="316" width="210" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="new_traverse_start_index" label="Start Index"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="210" id="wl2-pw-0ZM"/>
...
                            <textField opaque="NO" clipsSubviews="YES" tag="5" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" placeholder="..." textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="aGp-JL-mNw">
                                <rect key="frame" x="160" y="362" width="210" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="new_traverse_start_station" label="Start Station"/>
                                <color key="textColor" red="0.047058823530000002" green="0.37254901959999998" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                                <rect key="frame" x="460" y="74" width="120" height="64"/>
                                <color key="backgroundColor" red="0.4823529412" green="0.74117647060000003" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="edit_trav_list_side_shots_tab" label="Side Shots Tab"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="pTy-vF-rTs"/>
...
                                <rect key="frame" x="20" y="74" width="64" height="60"/>
                                <color key="backgroundColor" red="1" green="0.30588235294117649" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="edit_trav_list_add_new" label="Add New Shot"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="64" id="R6M-Y1-hWY"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Station Table" id="U7u-e2-ysv">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="7x1-QE-AEu">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="afp-2Y-Doc">
...
                                </constraints>
                            </imageView>
