...
}

- (void)awakeFromNib {
    [super awakeFromNib];
    title.text = @"Traverse 001";
    dateCreated.text = @"2016/04/25";
    description.text = @"This is a very detailed and sublime description label.";
    startingCoordinates.text = @"23.1324234123413, -50.13432432234, 0.13211123412";
    self.accessoryView.frame = CGRectMake(0, 0, 30, 30);
}

- (void)configureCellWithData:(NSDictionary*)data forTraverse:(Traverse*)traverse {
    NSDateFormatter *formatter = [[NSDateFormatter alloc] init];
    [formatter setDateFormat:CREATION_DATE_FORMAT];
...
